Finish refactoring.pdf

--- a/log.tex
+++ b/log.tex
@@ -1,35 +1,38 @@
 \begin{tabularx}{\textwidth}{l l X}\textbf{Commit} & \textbf{Author} & \textbf{Description}\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/5ec816dfc0e519d694f6da56351a2e67b482ec35}{5ec816d} & Artem Golovin & Initial commit\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/788ddbb7111d9619e219ae982a252e425357aff6}{788ddbb} & Artem Golovin & Add option to output inspection results in std out\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/c84133d93749d907509d9c70d27e74650d6b5c8c}{c84133d} & Artem Golovin & Implement inspectSuperclass method and add function for padded output\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/bff1f6f712e252773a3f6a4327aed282ca731384}{bff1f6f} & Artem Golovin & Implement inspectInterfaces method\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/67279bdb7cc979fa64b62ad9c3ce97f36f95b632}{67279bd} & Artem Golovin & Implement inspectConstructor method\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/5a3c07a9a640ae8a964eae4e9eed72e891decf44}{5a3c07a} & Artem Golovin & Implement inspectMethod method\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/7f2db0a58396b9fd2ede3c2b26ffe62950d598d2}{7f2db0a} & Artem Golovin & Implement inspectFields and inspectArray\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/deb1f1de7e5fc16777c9b73706129ce39fdea906}{deb1f1d} & Artem Golovin & Add basic README, move test classes to data package and create inspector package\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/afce1c33fb3eec7439dee533fa24dfd92e970780}{afce1c3} & Artem Golovin & Add step to inspect array object\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/2ad85609a71571066644866f9107f99da4ae5166}{2ad8560} & Artem Golovin & rename value to referenceValue for ref objects\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/521bf14c5b22ec50dd1e98daf4cb436209d49a3f}{521bf14} & Artem Golovin & Change newline characters\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/7db97f7b2600395c9b0ee1cbd8e1a8dbabeb5f06}{7db97f7} & Artem Golovin & Add util join method and rename Console to Utils\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/3ab0166b0c6bcba1fb7351f428c1eb30311bf4bc}{3ab0166} & Artem Golovin & Store inspected objects in HashMap's for testing and add simple tests\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/540bb7a99b2b6281e3c70237ad770311a633bfb9}{540bb7a} & awave1 & Inspect methods and fields when inspecting interfaces instead of inspecting class\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/b73d7e66fd35fda567d401dfe5d5cb7afcc3a6e1}{b73d7e6} & Artem Golovin & add different hashmaps to store inspection data\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/e9870e193e943079829666047ab28577e3f36f5d}{e9870e1} & awave1 & Add InspectorResult object to store results of object inspection\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/d6a2812c427a7c4fe80afba2fa551b98b55d9d1c}{d6a2812} & awave1 & Create FieldPair class to store field information for InspectorResult\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/3cf2305bafbcd57ebdd8c5777dd9d438601f6f3f}{3cf2305} & awave1 & Add tests for inspection with inheritance\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/992eda3ee69738ed6c845e9ed27b29a375acab12}{992eda3} & Artem Golovin & add primitive variables to tests\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/d87c9a622b308a8f602daf11d50ef403aa514d6b}{d87c9a6} & Artem Golovin & Test recursive inspection on ClassWithOneParent\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/2cc02136ed850ffcae30fa4ee4a6ac93fd3fc298}{2cc0213} & Artem Golovin & Test method inspection and fix bug to include private/protected methods\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/6033cc05036e5672d4463d26b2c790fa28b9f3d1}{6033cc0} & Artem Golovin & Add SomeInterface interface for tests\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/992de84b26ebd8ff617c07ba1faa6c01e31d2418}{992de84} & Artem Golovin & Turn off std output when running tests\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/c039ea3e021ec865e6318bafcb992de302e1b03f}{c039ea3} & Artem Golovin & Add array tests and move inspectValues to its own method to prevent duplicate code\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/5a60494c178ae449c73b64573945d738fa660fbc}{5a60494} & Artem Golovin & Include object inspection before inspecting array objects\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/5e47e8d3c80ca582c40d589319183ff8bbc04975}{5e47e8d} & Artem Golovin & Move leftpad methods to Console util class\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/66343ed9e306d8d95fc154743233476df9d8e01b}{66343ed} & Artem Golovin & add primitive args handling\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/645bfdce0ecb6be66d752fd30a505777d78f0cc4}{645bfdc} & Artem Golovin & Use IndentedOutput interface and use custom forEach to iterate array objects\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/c0fa48ba955e0b6b2a3a5b4cea0799a48608cd52}{c0fa48b} & Artem Golovin & Add tests for class with constructors and fix addConstructor method\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/bff6ce3c5e65af191b41dbea9ac64098c79f8d77}{bff6ce3} & Artem Golovin & Turn off std output for unit tests\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/2ce2c5cbcab69a44628f32983d441161834f1c94}{2ce2c5c} & Artem Golovin & Fix cli args and make directories to store scripts\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/ec357060b553399d386e08a757cf66dfdc4cd7a8}{ec35706} & Artem Golovin & Implement simple dynamic inspector loader\\ \hline
-\href{https://github.com/awave1/assessment-loan-system/commit/f156f9b121be09cd64888343984a15e279719ded}{f156f9b} & Artem Golovin & Move class loading into InspectorLoader\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/5ec816dfc0e519d694f6da56351a2e67b482ec35}{5ec816d} & Artem Golovin & Initial commit\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/788ddbb7111d9619e219ae982a252e425357aff6}{788ddbb} & Artem Golovin & Add option to output inspection results in std out\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/c84133d93749d907509d9c70d27e74650d6b5c8c}{c84133d} & Artem Golovin & Implement inspectSuperclass method and add function for padded output\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/bff1f6f712e252773a3f6a4327aed282ca731384}{bff1f6f} & Artem Golovin & Implement inspectInterfaces method\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/67279bdb7cc979fa64b62ad9c3ce97f36f95b632}{67279bd} & Artem Golovin & Implement inspectConstructor method\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/5a3c07a9a640ae8a964eae4e9eed72e891decf44}{5a3c07a} & Artem Golovin & Implement inspectMethod method\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/7f2db0a58396b9fd2ede3c2b26ffe62950d598d2}{7f2db0a} & Artem Golovin & Implement inspectFields and inspectArray\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/deb1f1de7e5fc16777c9b73706129ce39fdea906}{deb1f1d} & Artem Golovin & Add basic README, move test classes to data package and create inspector package\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/afce1c33fb3eec7439dee533fa24dfd92e970780}{afce1c3} & Artem Golovin & Add step to inspect array object\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/2ad85609a71571066644866f9107f99da4ae5166}{2ad8560} & Artem Golovin & rename value to referenceValue for ref objects\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/521bf14c5b22ec50dd1e98daf4cb436209d49a3f}{521bf14} & Artem Golovin & Change newline characters\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/7db97f7b2600395c9b0ee1cbd8e1a8dbabeb5f06}{7db97f7} & Artem Golovin & Add util join method and rename Console to Utils\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/3ab0166b0c6bcba1fb7351f428c1eb30311bf4bc}{3ab0166} & Artem Golovin & Store inspected objects in HashMap's for testing and add simple tests\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/540bb7a99b2b6281e3c70237ad770311a633bfb9}{540bb7a} & awave1 & Inspect methods and fields when inspecting interfaces instead of inspecting class\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/b73d7e66fd35fda567d401dfe5d5cb7afcc3a6e1}{b73d7e6} & Artem Golovin & add different hashmaps to store inspection data\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/e9870e193e943079829666047ab28577e3f36f5d}{e9870e1} & awave1 & Add InspectorResult object to store results of object inspection\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/d6a2812c427a7c4fe80afba2fa551b98b55d9d1c}{d6a2812} & awave1 & Create FieldPair class to store field information for InspectorResult\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/3cf2305bafbcd57ebdd8c5777dd9d438601f6f3f}{3cf2305} & awave1 & Add tests for inspection with inheritance\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/992eda3ee69738ed6c845e9ed27b29a375acab12}{992eda3} & Artem Golovin & add primitive variables to tests\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/d87c9a622b308a8f602daf11d50ef403aa514d6b}{d87c9a6} & Artem Golovin & Test recursive inspection on ClassWithOneParent\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/2cc02136ed850ffcae30fa4ee4a6ac93fd3fc298}{2cc0213} & Artem Golovin & Test method inspection and fix bug to include private/protected methods\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/6033cc05036e5672d4463d26b2c790fa28b9f3d1}{6033cc0} & Artem Golovin & Add SomeInterface interface for tests\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/992de84b26ebd8ff617c07ba1faa6c01e31d2418}{992de84} & Artem Golovin & Turn off std output when running tests\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/c039ea3e021ec865e6318bafcb992de302e1b03f}{c039ea3} & Artem Golovin & Add array tests and move inspectValues to its own method to prevent duplicate code\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/5a60494c178ae449c73b64573945d738fa660fbc}{5a60494} & Artem Golovin & Include object inspection before inspecting array objects\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/5e47e8d3c80ca582c40d589319183ff8bbc04975}{5e47e8d} & Artem Golovin & Move leftpad methods to Console util class\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/66343ed9e306d8d95fc154743233476df9d8e01b}{66343ed} & Artem Golovin & add primitive args handling\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/645bfdce0ecb6be66d752fd30a505777d78f0cc4}{645bfdc} & Artem Golovin & Use IndentedOutput interface and use custom forEach to iterate array objects\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/c0fa48ba955e0b6b2a3a5b4cea0799a48608cd52}{c0fa48b} & Artem Golovin & Add tests for class with constructors and fix addConstructor method\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/bff6ce3c5e65af191b41dbea9ac64098c79f8d77}{bff6ce3} & Artem Golovin & Turn off std output for unit tests\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/2ce2c5cbcab69a44628f32983d441161834f1c94}{2ce2c5c} & Artem Golovin & Fix cli args and make directories to store scripts\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/ec357060b553399d386e08a757cf66dfdc4cd7a8}{ec35706} & Artem Golovin & Implement simple dynamic inspector loader\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/f156f9b121be09cd64888343984a15e279719ded}{f156f9b} & Artem Golovin & Move class loading into InspectorLoader\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/04db097989e2c8f71446b8f012f509a6132645c8}{04db097} & Artem Golovin & use java 1.8\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/5d8eaeff2d1d2ee2cce366d225657b37b16ae0fd}{5d8eaef} & Artem Golovin & update scripts for java 1.8\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/9e0bc1287fc27e5ed1d0be29bcf8d116e50d972a}{9e0bc12} & Artem Golovin & set recursive to true by default\\ \hline
 \end{tabularx}
