Update README to include steps to run DynamicReflectiveInspector and update logs for refactoring doc

--- a/log.tex
+++ b/log.tex
@@ -35,4 +35,6 @@
 \href{https://github.com/awave1/ObjectInspector/commit/04db097989e2c8f71446b8f012f509a6132645c8}{04db097} & Artem Golovin & use java 1.8\\ \hline
 \href{https://github.com/awave1/ObjectInspector/commit/5d8eaeff2d1d2ee2cce366d225657b37b16ae0fd}{5d8eaef} & Artem Golovin & update scripts for java 1.8\\ \hline
 \href{https://github.com/awave1/ObjectInspector/commit/9e0bc1287fc27e5ed1d0be29bcf8d116e50d972a}{9e0bc12} & Artem Golovin & set recursive to true by default\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/ef755fe5a97445bba3121a3a69ac2069f66994cc}{ef755fe} & Artem Golovin & Finish refactoring.pdf\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/e8744de8105b6dff68749c4eb2c155bf2f6bf3c6}{e8744de} & Artem Golovin & better handle exceptions for DynamicReflectiveInspector\\ \hline
 \end{tabularx}
