--- a/refactoring.tex
+++ b/refactoring.tex
@@ -65,7 +65,7 @@
 
 \section*{Overview}
 
-\code{ObjectInspector} is a reflective object inspector. It performs complete object inspection at a runtime. \code{Inspector} handles the object inspection. General project setup is described in project \href{https://github.com/awave1/ObjectInspector#reflective-object-inspector}{README.md}.
+\href{https://github.com/awave1/ObjectInspector}{\code{ObjectInspector}} is a reflective object inspector. It performs complete object inspection at a runtime. \code{Inspector} handles the object inspection. General project setup is described in project \href{https://github.com/awave1/ObjectInspector#reflective-object-inspector}{README.md}. Project can also be found on GitLab \href{https://gitlab.cpsc.ucalgary.ca/artem.golovin/ObjectInspector}{artem.golovin/ObjectInspector}
 
 \section*{Refactoring}
 
