--- a/log.tex
+++ b/log.tex
@@ -37,4 +37,11 @@
 \href{https://github.com/awave1/ObjectInspector/commit/9e0bc1287fc27e5ed1d0be29bcf8d116e50d972a}{9e0bc12} & Artem Golovin & set recursive to true by default\\ \hline
 \href{https://github.com/awave1/ObjectInspector/commit/ef755fe5a97445bba3121a3a69ac2069f66994cc}{ef755fe} & Artem Golovin & Finish refactoring.pdf\\ \hline
 \href{https://github.com/awave1/ObjectInspector/commit/e8744de8105b6dff68749c4eb2c155bf2f6bf3c6}{e8744de} & Artem Golovin & better handle exceptions for DynamicReflectiveInspector\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/b4194a0b5da09a00e2497c58d94fee95fa9e428d}{b4194a0} & Artem Golovin & Update README to include steps to run DynamicReflectiveInspector and update logs for refactoring doc\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/2b331bd1a8e449e6bb33e80e3aa925c59f7f3439}{2b331bd} & Artem Golovin & Update README.md\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/6dbdab8f21b66d4034da1cadc2f19dc978e5616f}{6dbdab8} & Artem Golovin & Update README.md\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/4b8ccbb678a9258900fc1fe66e43cedc777c1066}{4b8ccbb} & Artem Golovin & update refactoring.pdf\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/489463fa7241ac729d600f2a1f0ad9f79fb17bb5}{489463f} & Artem Golovin & Update README.md\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/146c4b8e547a857d8c47f7637e463e82ca6fcf64}{146c4b8} & Artem Golovin & Fix nexted interfaces\\ \hline
+\href{https://github.com/awave1/ObjectInspector/commit/07c3ed821baeec5671e1f86316351f26d4bc25e0}{07c3ed8} & Artem Golovin & Merge branch 'master' of github.com:awave1/ObjectInspector\\ \hline
 \end{tabularx}
